@@ -6,6 +6,7 @@
 * Added german translations (contributed by Johannes Guenther).
 * Updated localization files.
 * Updated plugin window template.
+* Updated build files.
 
 === 1.0.2 ===
 * Added support of JACK connection status indication.
